--- a/restaurantes/sensei.html
+++ b/restaurantes/sensei.html
@@ -10,6 +10,7 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../assets/css/normalize.css">
   <link rel="stylesheet" href="../assets/css/styles.css">
   <title>las mejores pizzas de mi cuidad</title>
@@ -22,7 +23,6 @@
         <a href="../" class="close">
           <span>X</span>
         </a>
-
       </div>
       <header>
         <h2 class="title-item">
@@ -31,7 +31,7 @@
         </h2>
       </header>
       <section>
-        <img src="/assets/img/sensei.jpg " alt="" class="main-img">
+        <img src="../assets/img/sensei.jpg" alt="" class="main-img" />
         <div class="text">
           <address class="address">
             <i class="fas fa-map-marker-alt"></i>
@@ -52,6 +52,6 @@
   </div>
 </body>
 
-<script src="/assets/scripts/main.js"></script>
+<script src="../assets/scripts/main.js"></script>
 
 </html>
