--- a/restaurantes/sensei.html
+++ b/restaurantes/sensei.html
@@ -13,7 +13,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../assets/css/normalize.css">
   <link rel="stylesheet" href="../assets/css/styles.css">
-  <title>las mejores pizzas de mi cuidad</title>
+  <title>las mejores pizzas de mi ciudad</title>
 </head>
 
 <body>
